[package]
name = "monoio-netreq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
monoio = "0.2.4"
monoio-transports = { version = "0.5.3", optional = true }
monoio-transports-patched = { git = "https://github.com/rEflxzR/monoio-transports.git", branch = "main", optional = true }
monoio-http = "0.3.11"
hyper = { version = "1.5.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
http = "1.1.0"
thiserror = "2.0.3"
serde = "1.0.215"
serde_json = "1.0.132"
bytes = "1.8.0"
smol_str = "0.3.2"
service-async = "0.2.4"


[dev-dependencies]
anyhow = "1.0.92"


[features]
default = ["default-crate"]
default-crate = ["dep:monoio-transports"]

# Features for native-tls
native-tls = ["monoio-transports/native-tls"]
native-tls-patch = ["monoio-transports-patched/native-tls"]

# Features for hyper
hyper = ["monoio-transports/hyper", "dep:hyper", "dep:http-body-util"]
hyper-patch = ["monoio-transports-patched/hyper", "dep:hyper", "dep:http-body-util"]

# Patch transport feature
transports-patch = ["dep:monoio-transports-patched"]